--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,18 +7,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  sync:
     runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Checkout latest
+        uses: actions/checkout@v4
         with:
-          python-version: '3.x'
-
-      - name: Python version
-        run: python --version
-
-      - name: Syntax check
-        run: python -m compileall app.py
+          fetch-depth: 1
