Add optional Basic Auth for LAN

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,25 @@ SENTINELONE_API_URL=
 # Generate from: Console -> Settings -> Users -> [Your User] -> Options -> API Token Operations
 SENTINELONE_API_TOKEN=
 
+# Flask / Server Configuration
+# Set a stable secret key for sessions (recommended, especially on LAN)
+FLASK_SECRET_KEY=
+
+# Bind address and port
+FLASK_HOST=0.0.0.0
+PORT=5000
+
+# Set to 1 only for local debugging
+FLASK_DEBUG=0
+
+# Optional: Basic Auth (recommended if exposing on LAN)
+ENABLE_BASIC_AUTH=0
+BASIC_AUTH_USERNAME=
+BASIC_AUTH_PASSWORD=
+
+# Upload pruning
+UPLOAD_RETENTION_HOURS=24
+
 # NinjaRMM API Configuration
 # Your NinjaRMM API URL (usually https://api.ninjarmm.com for US or https://eu-api.ninjarmm.com for EU)
 NINJARMM_API_URL=https://api.ninjarmm.com
