Harden NinjaRMM run-script endpoint

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,18 @@ BASIC_AUTH_PASSWORD=
 # Upload pruning
 UPLOAD_RETENTION_HOURS=24
 
+# Remediation hardening (recommended)
+# If set, ONLY these script IDs are allowed to be executed via /ninjarmm/run-script
+NINJARMM_ALLOWED_SCRIPT_IDS=
+
+# Require the device to be currently online before allowing script execution
+NINJARMM_REQUIRE_DEVICE_ONLINE=1
+NINJARMM_ONLINE_MAX_AGE_SECONDS=300
+
+# Optional: allow the /ninjarmm/test endpoint for troubleshooting
+ENABLE_NINJARMM_TEST=0
+
+
 # NinjaRMM API Configuration
 # Your NinjaRMM API URL (usually https://api.ninjarmm.com for US or https://eu-api.ninjarmm.com for EU)
 NINJARMM_API_URL=https://api.ninjarmm.com
