--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ ENABLE_BASIC_AUTH=0
 BASIC_AUTH_USERNAME=
 BASIC_AUTH_PASSWORD=
 
+# Session cookie security (set SECURE=1 when behind HTTPS)
+SESSION_COOKIE_SAMESITE=Lax
+SESSION_COOKIE_SECURE=0
+
 # Upload pruning
 UPLOAD_RETENTION_HOURS=24
 
