Add AD inventory intake and compare

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,11 @@ BASIC_AUTH_PASSWORD=
 SESSION_COOKIE_SAMESITE=Lax
 SESSION_COOKIE_SECURE=0
 
+# Active Directory intake token (rotate periodically)
+# Set CURRENT to a strong random value; keep PREVIOUS during rotation to avoid downtime.
+AD_INTAKE_TOKEN_CURRENT=
+AD_INTAKE_TOKEN_PREVIOUS=
+
 # Upload pruning
 UPLOAD_RETENTION_HOURS=24
 
