Allow overriding AD callback URL

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,11 @@ SESSION_COOKIE_SECURE=0
 AD_INTAKE_TOKEN_CURRENT=
 AD_INTAKE_TOKEN_PREVIOUS=
 
+# Optional: override the callback URL used for AD inventory intake.
+# Use this if the server is behind a reverse proxy or you want to force a LAN/public URL.
+# Example: https://comparison.example.com/ad/intake
+AD_CALLBACK_URL=
+
 # Upload pruning
 UPLOAD_RETENTION_HOURS=24
 
