Improve Ninja OAuth scope and errors

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,10 @@ NINJARMM_API_URL=https://api.ninjarmm.com
 NINJARMM_CLIENT_ID=
 NINJARMM_CLIENT_SECRET=
 
+# Optional: OAuth scopes (space-separated). If you get 401 when running scripts, include control/management scopes.
+# Example: monitoring management control
+NINJARMM_OAUTH_SCOPE=monitoring
+
 # Option 2: Legacy API (Basic Auth - older, being phased out)
 # Generate from: Administration -> Apps -> API -> Add (select "Legacy")
 # NINJARMM_API_KEY=
